# fastapi_crud

./: .env  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e589ef31690_initial_migration.py
app/: Dockerfile  crud.py  main.py  models.py  schemas.py
